src/Java-Backend/src/parser/ParserMain.jjt
options
{
  LOOKAHEAD=1;
  STATIC=false;
}

PARSER_BEGIN(GrammarParser)
package parser;


import utils.Utils;
import java.io.BufferedReader;
import java.io.InputStreamReader;
import java.io.IOException;



public class GrammarParser {
  public static void main(String args[]) throws ParseException {
    //read regex
    try {

    BufferedReader bufferRead = new BufferedReader(new InputStreamReader(System.in));
    String regex = bufferRead.readLine();

    Utils.initDfa(regex);
    }catch (IOException e) {
      e.printStackTrace();
    }

  }

}

PARSER_END(GrammarParser)


SKIP :
{
  " " | "\r" | "\t"
}

TOKEN: {
  <INTERVAL: ( <INTEGER> ("," (<INTEGER>)? )? )> |
  <OPERATOR: (["*", "+", "?"])> |
  <INTEGER: (["0" - "9"])+ > |
  <LF: "\n"> |
  <IDENTIFIER: (["A" - "Z"]) (["a" - "z", "0" - "9"])* > |
  <DOT: ".">
}

SimpleNode Start(): {}
{
  NFASet() <LF> {return jjtThis;}
}

void NFASet(): {}
{
  ExpressionSet() ("|" ExpressionSet())*
}

void ExpressionSet(): {}
{
  (Expression())+
}

void Expression() #void: {Token identifier, op;}
{
  (   "(" NFASet() ")" (Operator())?   ) #SubNFA
  |
  (   (identifier = <IDENTIFIER> | identifier = <DOT> ) { jjtThis.name = identifier.image;} (Operator())?  ) #Term
}

void Operator(): {Token op;}
{
  (
    (   op = <OPERATOR>		)
    |
    ( "{" op = < INTERVAL >  "}" )
  ) { jjtThis.name = op.image; }
}
